[KRDB] Rename GTK colours to be exported

Summary:
The colours exported by KRDB for GTK now have the _breeze suffix.

BUG: 417461
FIXED-IN: 5.19

Test Plan: In tandem with D27425, no visual change should be expected.

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ongunkanat, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27426